fixed navbar and community page and added profile link

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -5,3 +5,16 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
+:root {
+  --background: white;
+  --text-primary: black;
+  --text-secondary: royalblue;
+  --accent: purple;
+}
+[data-theme='dark'] {
+  --background: black;
+  --text-primary: white;
+  --text-secondary: grey;
+  --accent: darkred;
+}
